Use image with Java 11 since we use `--release 11`
Also switch from Tomcat 8.5 to Tomcat 9, as it is now the oldest version
we support.